<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/input_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/password_tip"
        android:textColor="#fF0000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbPasswordShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView2"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/password_display" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbPasswordShow"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tvPassConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etPassword"
        android:text="@string/password_repeat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etPasswordRepeat"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassConfirm"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

</RelativeLayout>